# MAARustUI

./: Cargo.toml
src/: lib.rs  main.rs
src/binding/: bind.rs  connection.rs  event.rs  event_handler.rs  mod.rs  options.rs  resources.rs
src/binding/events/: async_call_info.rs  connection_info.rs  mod.rs  sub_task_extra_info.rs  sub_task_start.rs  task_chain_completed.rs  task_chain_error.rs  task_chain_start.rs
src/binding/tasks/: award.rs  close_down.rs  fight.rs  mall.rs  mod.rs  recruit.rs  roguelike.rs  startup.rs
src/gui/: backend_panel.rs  mod.rs  wrapper.rs
src/gui/main/: about.rs  app_windows.rs  mod.rs
src/updater/: mod.rs
src/updater/api/: mod.rs  repo_release.rs
