[package]
name = "maa_rust_ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.18"
env_logger = "0.10.0"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
futures = "0.3.28"

[build-dependencies]
bindgen = "0.65.1"
