[package]
name = "maa_rust_ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.18"
env_logger = "0.10.0"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"]}
indicatif = "0.17.5"
tempfile = "3.5.0"
zip = "0.6.6"
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = { version = "0.22.0", features = ["ron", "serde"] }

[build-dependencies]
bindgen = "0.65.1"
